--- a/app/src/main/res/layout/activity_scrabble.xml
+++ b/app/src/main/res/layout/activity_scrabble.xml
@@ -24,14 +24,15 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.ema.activities.ScrabbleActivity">
+    tools:context="br.com.ema.activities.ScrabbleActivity"
+    android:gravity="center_horizontal">
 
     <LinearLayout
         android:id="@+id/unscrambled"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_weight="7.26">
+        android:layout_weight="1.0">
 
 
 
@@ -63,10 +64,12 @@
     </LinearLayout>
     <LinearLayout
         android:id="@+id/images"
-        android:layout_width="400dp"
+        android:layout_width="471dp"
         android:layout_height="300dp"
-        android:layout_weight="50"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="3.5">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -82,33 +85,46 @@
         android:layout_height="wrap_content"
         android:text="@string/information"
         android:textSize="@dimen/activity_horizontal_margin"
-        android:typeface="serif" />
+        android:typeface="serif"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal"
+        android:layout_weight="0.5" />
 
     <LinearLayout
         android:id="@+id/scrambled"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="50"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center|center_vertical|center_horizontal"
+        android:weightSum="1"
+        android:layout_weight="1.5">
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/help"
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1.5">
 
+    </LinearLayout>
 
 
     <LinearLayout
         android:id="@+id/speakers"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="50"
-        android:orientation="horizontal">
+        android:layout_weight="1.5"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal">
 
         <Button
-            android:id="@+id/nextButton"
-            android:layout_width="100dp"
+            android:id="@+id/stopBtn"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:layout_marginRight="15dp"
-            android:onClick="onClick"
-            android:text="@string/next" />
+            android:text="@string/finish" />
 
         <ToggleButton
             android:id="@+id/speechToggle"
@@ -120,6 +136,15 @@
             android:textOn="@string/speech_toggle_on"
             android:layout_gravity="left"
             android:checked="false" />
+
+        <Button
+            android:id="@+id/nextButton"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="15dp"
+            android:onClick="onClick"
+            android:text="@string/next" />
 
     </LinearLayout>
 </LinearLayout>
