--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="@string/settings"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
+    <!-- Difficult Level -->
     <TextView
         android:id="@+id/levelText"
         android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
             android:text="@string/levelHard"
             android:onClick="onLevelClicked"/>
     </RadioGroup>
-
+    <!-- language -->
     <TextView
         android:id="@+id/language"
         android:layout_width="wrap_content"
@@ -107,6 +107,34 @@
             android:checked="false"
             android:text="@string/english"
             android:onClick="onLanguageClicked"/>
+    </RadioGroup>
+
+    <!-- Sound -->
+    <TextView
+        android:id="@+id/sound"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/sound"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/onRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="true"
+            android:text="@string/turnOn" />
+
+        <RadioButton
+            android:id="@+id/offRadioButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:checked="false"
+            android:text="@string/turnOff" />
     </RadioGroup>
 
     <Button
