--- a/app/src/main/res/layout/activity_take_photo.xml
+++ b/app/src/main/res/layout/activity_take_photo.xml
@@ -28,9 +28,9 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_weight="0.10"
-        >
+        android:weightSum="1">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textColor="@color/blue"
@@ -38,25 +38,32 @@
             android:text="@string/Photo"
             android:id="@+id/textView"
             android:textSize="30sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_weight="0.95"
+            tools:ignore="NestedWeights" />
+        <ImageButton
+            android:layout_width="69dp"
+            android:layout_height="match_parent"
+            android:onClick="rotate"
+            android:background="@null"
+            android:src="@drawable/ic_rotate_right_black_24dp"
+            android:contentDescription="@string/rotate" />
     </LinearLayout>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.60"
-        android:orientation="horizontal">
+        android:layout_weight="0.60">
 
         <ImageView
             android:id="@+id/photo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="384dp"
             android:layout_gravity="center"
             android:adjustViewBounds="true"
             android:contentDescription="@string/image"
             android:cropToPadding="true"
-            android:orientation="vertical"
             android:src="@drawable/ic_photo_camera_black_48dp" />
     </LinearLayout>
     <LinearLayout
