--- a/app/src/main/res/layout/activity_profiles.xml
+++ b/app/src/main/res/layout/activity_profiles.xml
@@ -14,121 +14,132 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout"
+    android:id="@+id/MainLayout"
+    android:background="@color/white"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.ema.activities.admin.ProfilesActivity"
     android:weightSum="1">
 
-    <LinearLayout
-        android:id="@+id/LogoLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:weightSum="1"
-        android:layout_weight="0.1"
-        android:baselineAligned="false">
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:src="@mipmap/logo3"
             android:contentDescription="@string/logo"
-            android:layout_height="100dp" />
+            android:layout_height="34dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
         <TextView
             android:id="@+id/information"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
             android:textColor="@color/blue"
             android:text="@string/users"
             android:textSize="25sp"
             android:typeface="normal"
-            android:textStyle="bold" />
-    </LinearLayout>
+            android:textStyle="bold"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintHorizontal_bias="0.0" />
 
-    <LinearLayout
-        android:id="@+id/list"
-        android:layout_width="match_parent"
+
+    <Button
+        android:id="@+id/newUserBtn"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:onClick="toUserSettings"
+        android:text="@string/newUser"
+        android:theme="@style/GreenButton"
+        tools:ignore="ButtonStyle"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/deleteUserBtn" />
+
+    <Button
+        android:id="@+id/updateDataBtn"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:onClick="toEditUser"
+        android:text="@string/updateData"
+        android:theme="@style/BlueButton"
+        tools:ignore="ButtonStyle"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/menuBtn" />
+
+    <Button
+        android:id="@+id/deleteUserBtn"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.3"
-        android:baselineAligned="false">
+        android:onClick="deleteUsers"
+        android:text="@string/deleteUsers"
+        android:theme="@style/RedButton"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
-        <ListView
-            android:layout_width="match_parent"
-            android:id="@+id/studentslistView"
-            android:choiceMode="multipleChoice"
-            android:clickable="true"
-            tools:ignore="NestedWeights"
-            android:layout_height="300dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/profilesInfoLayout"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/menuBtn"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:layout_weight="0.1"
-        android:baselineAligned="false">
-        <TextView
-            android:id="@+id/profilesInfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="@dimen/activity_horizontal_margin"
-            android:typeface="serif" />
-    </LinearLayout>
-    <TableLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/white"
-        android:columnCount="2"
-        android:layout_weight="0.1"
-        android:gravity="center_horizontal">
-        <TableRow>
-            <Button
-                android:theme="@style/BlueButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/updateData"
-                android:id="@+id/updateDataBtn"
-                android:onClick="toEditUser"
-                tools:ignore="ButtonStyle" />
+        android:onClick="toMenu"
+        android:text="@string/goBack"
+        android:theme="@style/GoBackButton"
+        tools:ignore="ButtonStyle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
-            <Button
-                android:theme="@style/GreenButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/newUser"
-                android:id="@+id/newUserBtn"
-                android:onClick="toUserSettings"
-                tools:ignore="ButtonStyle" />
-        </TableRow>
-        <TableRow>
-            <Button
-                android:theme="@style/GoBackButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/goBack"
-                android:id="@+id/menuBtn"
-                android:onClick="toMenu"
-                tools:ignore="ButtonStyle" />
+    <ListView
+        android:id="@+id/studentslistView"
+        android:layout_width="0dp"
+        android:layout_height="306dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:choiceMode="multipleChoice"
+        android:clickable="true"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="NestedWeights"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/information" />
 
-            <Button
-                android:theme="@style/RedButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/deleteUsers"
-                android:id="@+id/deleteUserBtn"
-                android:onClick="deleteUsers" />
-        </TableRow>
-    </TableLayout>
+    <TextView
+        android:id="@+id/profilesInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/activity_horizontal_margin"
+        android:typeface="serif"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/studentslistView" />
 
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
