--- a/app/src/main/res/layout/activity_create_challenge.xml
+++ b/app/src/main/res/layout/activity_create_challenge.xml
@@ -25,78 +25,59 @@
     android:layout_height="match_parent"
     tools:context="org.ema.activities.admin.CreateTextActivity">
 
-    <TextView
-        android:id="@+id/textView"
+    <ImageView
+        android:id="@+id/image"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/Word"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/blue"
-        android:textSize="40sp"
-        android:textStyle="bold"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/image"
+        android:cropToPadding="true"
+        android:orientation="vertical"
+        android:padding="2dp"
+        android:paddingBottom="2dp"
+        android:paddingEnd="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingStart="2dp"
+        android:paddingTop="2dp"
+        android:src="@drawable/ic_photo_black_48dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="9dp" />
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:adjustViewBounds="true"
-            android:contentDescription="@string/image"
-            android:cropToPadding="true"
-            android:orientation="vertical"
-            android:padding="2dp"
-            android:paddingBottom="2dp"
-            android:paddingEnd="2dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:paddingStart="2dp"
-            android:paddingTop="2dp"
-            android:src="@drawable/ic_photo_black_48dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/word"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView"
-            app:layout_constraintVertical_bias="0.555" />
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/word" />
 
 
-        <EditText
-            android:id="@+id/word"
-            android:layout_width="0dp"
-            android:layout_height="47dp"
-            android:layout_margin="2dp"
-            android:adjustViewBounds="true"
-            android:background="@color/blue"
-            android:ems="10"
-            android:hint="@string/Word"
-            android:inputType=""
-            android:padding="2dp"
-            android:paddingBottom="2dp"
-            android:paddingEnd="2dp"
-            android:paddingLeft="2dp"
-            android:paddingRight="2dp"
-            android:paddingStart="2dp"
-            android:paddingTop="2dp"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginBottom="2dp"
-            app:layout_constraintBottom_toTopOf="@+id/send" />
+    <EditText
+        android:id="@+id/word"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:adjustViewBounds="true"
+        android:background="@color/blue"
+        android:ems="10"
+        android:hint="@string/Word"
+        android:inputType=""
+        android:padding="2dp"
+        android:paddingBottom="2dp"
+        android:paddingEnd="2dp"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
+        android:paddingStart="2dp"
+        android:paddingTop="2dp"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/send" />
 
 
     <Button
@@ -106,11 +87,11 @@
             android:onClick="saveWord"
             android:text="@string/save"
         app:layout_constraintRight_toLeftOf="@+id/takePicture"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintLeft_toRightOf="@+id/cancel"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintHorizontal_bias="0.478"
         android:layout_marginBottom="8dp" />
 
         <Button
@@ -123,7 +104,9 @@
             android:layout_marginEnd="9dp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="8dp" />
+            android:layout_marginBottom="9dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/word" />
 
     <Button
         android:id="@+id/cancel"
@@ -131,10 +114,13 @@
         android:drawableTop="@drawable/ic_cancel_black_48dp"
         android:onClick="toWordsList"
         android:text="@string/cancel"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/word"
+        app:layout_constraintVertical_bias="0.476" />
 
 </android.support.constraint.ConstraintLayout>
